--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,19 +21,20 @@
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.6"
+            android:layout_weight="0.7"
             tools:context="com.jasonkcwong.fakeittillyoumakeit.MainActivity" />
 
-        <LinearLayout
+        <RadioGroup
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.15"
             android:gravity="center_horizontal"
-            >
+            android:orientation="horizontal">
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Walk"
+                android:checked="true"
                 android:id="@+id/radioButton1"
                 android:layout_gravity="center"
                 android:layout_marginRight="10dp"/>
@@ -50,7 +51,7 @@
                 android:id="@+id/radioButton3"
                 android:layout_gravity="center"
                 android:layout_marginLeft="10dp"/>
-        </LinearLayout>
+        </RadioGroup>
 
 
         <android.support.v7.widget.AppCompatButton
@@ -58,10 +59,11 @@
             android:layout_width="200dp"
             android:layout_height="0dp"
             android:layout_gravity="center"
-            android:backgroundTint="@color/colorPrimary"
+            android:backgroundTint="@color/colorAccent"
             android:textColor="#ffffff"
             android:text="Start"
             android:textAlignment="center"
-            android:layout_weight="0.15"/>
+            android:layout_weight="0.15"
+            android:layout_marginBottom="50dp"/>
     </LinearLayout>
 </LinearLayout>
